se cambio fuente de letra y los parrafos del contenedor tres fotos por enlaces

--- a/index.html
+++ b/index.html
@@ -43,21 +43,15 @@
      <div class="row">
         <div class="col-4">
            <img class="fotostres primera" src="img/grupal.jpg">
-           <h3 class="texto">
-           	EL LENGUAJE DEL FUTURO
-           </h3>
+           <a class="texto" href="#"> EL LENGUAJE DEL FUTURO </a>
         </div>
         <div class="col-4">
            <img class="fotostres" src="img/grupal.jpg">
-           <h3 class="texto">
-           	APRENDER A APRENDER
-           </h3>
+           <a class="texto" href="#"> APRENDER A APRENDER </a>
         </div>
         <div class="col-4">
            <img  class="fotostres" src="img/grupal.jpg">
-           <h3 class="texto">
-           	EMPRENDIMIENTO
-           </h3>
+           <a class="texto" href="#"> EMPRENDIMIENTO </a>
         </div>
      </div>
   </div>
